# rust-jason

./: Cargo.toml  LillyAndI.json
benches/: benchmarks.rs
src/: lib.rs  main.rs  util.rs
src/datamodel/: address.rs  mod.rs  person.rs  pet.rs  resident.rs
