[package]
name = "jason"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jason"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"


[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false